post report de respuesta y comentario
